[tool.poetry]
name = "nonebot-plugin-poke-status"
version = "0.1.0"
description = "poke-status"
license = "MIT"
authors = ["alphaAE <a1226123914@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/cscs181/QQ-GitHub-Bot/tree/master/src/plugins/nonebot_plugin_status"
repository = "https://github.com/cscs181/QQ-GitHub-Bot/tree/master/src/plugins/nonebot_plugin_status"
keywords = ["nonebot2", "status"]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.9.0"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
